# pet-pet-gif-fork

./: pyproject.toml
petpetgif/: petpet.py  saveGif.py
tests/: test_petpet.py
